name:          cabal-merger
version:       0.0.1
build-type:    Simple
cabal-version: >=1.10
license:       MIT

executable cabal-merger
  hs-source-dirs: src
  build-depends:       base
                     , Cabal
                     , containers
  default-extensions:  OverloadedStrings
  main-is:             Main.hs
  default-language:    Haskell2010
